--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,9 +1,16 @@
+/* В этом файле вы опишете значения переменных в разных цветовых схемах.
+Придерживайтесь такого именования классов:
+✦ theme-dark — класс тёмной темы
+✦ theme-light — класс светлой темы
+✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
+*/
+
 :root.theme-light {
   --themes-main-color: #000;
-  --themes-bg-color: #fff;
+  --themes-backgroud-color: #fff;
   --themes-button-text-color: #fff;
-  --themes-fw-title: 700;
-  --themes-fw-content: 400;
+  --themes-font-weight-title: 700;
+  --themes-font-weight-content: 400;
   --background: repeating-linear-gradient(
       90deg,
       #d3d3d3 0px 2px,
@@ -16,10 +23,10 @@
 @media (prefers-color-scheme: light) {
   :root {
     --themes-main-color: #000;
-    --themes-bg-color: #fff;
+    --themes-backgroud-color: #fff;
     --themes-button-text-color: #fff;
-    --themes-fw-title: 700;
-    --themes-fw-content: 400;
+    --themes-font-weight-title: 700;
+    --themes-font-weight-content: 400;
     --background: repeating-linear-gradient(
         90deg,
         #d3d3d3 0px 2px,
@@ -36,10 +43,10 @@
 
 :root.theme-dark {
   --themes-main-color: #00cc14;
-  --themes-bg-color: #000;
+  --themes-backgroud-color: #000;
   --themes-button-text-color: #00cc14;
-  --themes-fw-title: 785;
-  --themes-fw-content: 465;
+  --themes-font-weight-title: 785;
+  --themes-font-weight-content: 465;
   --background: repeating-linear-gradient(90deg, black 0px 2px, rgba(0, 0, 0, 0) 2px 4px),
   repeating-linear-gradient(180deg, black 0px 2px, rgba(0, 0, 0, 0) 2px 4px),
   linear-gradient(180deg, #007f0c 0%, #004306 100%);
